# ArcReel

./: CHANGELOG.md  pyproject.toml
alembic/versions/: 285dbe1e9824_add_provider_columns_to_tasks.py  a3f1c9b27e54_extend_dedup_to_cancelling.py
frontend/: package.json
frontend/src/: api.test.ts  api.ts
frontend/src/components/task-hud/: TaskHud.tsx
frontend/src/hooks/: useTaskFailureNotifications.test.tsx  useTasksSSE.test.tsx
frontend/src/i18n/en/: dashboard.ts
frontend/src/i18n/vi/: dashboard.ts
frontend/src/i18n/zh/: dashboard.ts
frontend/src/stores/: stores.test.ts  tasks-store.ts
frontend/src/test/: factories.ts
frontend/src/types/: task.ts
frontend/src/utils/: task-target.test.ts
lib/: generation_queue.py  generation_worker.py  project_manager.py
lib/custom_provider/: backends.py
lib/db/models/: task.py
lib/db/repositories/: task_repo.py
lib/i18n/en/: errors.py
lib/i18n/vi/: errors.py
lib/i18n/zh/: errors.py
lib/video_backends/: ark.py  base.py  gemini.py  grok.py  newapi.py  openai.py  vidu.py
server/: app.py
server/agent_runtime/: session_manager.py
server/routers/: assistant.py  files.py  projects.py  reference_videos.py
server/services/: reference_video_tasks.py
tests/: test_app_module.py  test_app_startup_migration.py  test_assistant_routes.py  test_generation_queue.py  test_generation_worker_module.py  test_locked_episode_script_toctou.py  test_newapi_video_backend.py  test_openai_video_backend.py  test_project_manager_concurrent_save.py  test_project_manager_more.py  test_projects_router.py  test_reference_video_concurrent_rmw.py  test_session_store_startup_migration.py  test_task_cancel_router.py  test_task_repo.py  test_task_repo_state_machine.py
tests/agent_runtime/: test_agent_startup_error.py
tests/server/: test_reference_videos_router.py
